# git-mob

./: Cargo.toml  LICENSE  README.md  build-manpages.sh  build.rs  flake.nix  prepare-release.sh
.github/: dependabot.yml
.github/workflows/: build_deb.yml  ci.yml
docs/: git-add-coauthor.md  git-delete-coauthor.md  git-edit-coauthor.md  git-mob.md  git-solo.md
src/: cli.rs  lib.rs
