[package]
name = "git_mob"
version = "0.3.5"
authors = ["Martin Frost <martin@frost.ws>"]
edition = "2018"
description = "A CLI tool for social coding."
license = "MIT"
homepage = "https://github.com/Frost/git-mob"
repository = "https://github.com/Frost/git-mob"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0"
git2 = { version = "0.13", default-features = false }
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0.0-rc.4", features = ["derive"] }

[package.metadata.deb]
name = "git-mob"
revision = "1"
section = "vcs"
priority = "optional"
extended-description = """\
A set of git subcommands for including co-authors to your git commits."""
