[package]
name = "git_mob"
version = "0.4.2"
authors = ["Martin Frost <martin@frost.ws>"]
edition = "2018"
description = "A CLI tool for social coding."
license = "MIT"
homepage = "https://github.com/Frost/git-mob"
repository = "https://github.com/Frost/git-mob"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
git2 = { version = "0.15", default-features = false }
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[package.metadata.deb]
name = "git-mob"
revision = "1"
section = "vcs"
priority = "optional"
extended-description = """\
A set of git subcommands for including co-authors to your git commits."""
assets = [
    ["target/release/git-mob", "usr/bin/", "755"],
    ["target/release/git-solo", "usr/bin/", "755"],
    ["target/release/git-add-coauthor", "usr/bin/", "755"],
    ["target/release/git-edit-coauthor", "usr/bin/", "755"],
    ["target/release/git-delete-coauthor", "usr/bin/", "755"],
    ["target/man/git-mob.1.gz", "usr/share/man/man1/", "644"],
    ["target/man/git-solo.1.gz", "usr/share/man/man1/", "644"],
    ["target/man/git-add-coauthor.1.gz", "usr/share/man/man1/", "644"],
    ["target/man/git-edit-coauthor.1.gz", "usr/share/man/man1/", "644"],
    ["target/man/git-delete-coauthor.1.gz", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/git-mob/README", "644"],
]
