[package]
name = "git-mob"
version = "0.5.0"
authors = [ "Martin Frost <martin@frost.ws>" ]
edition = "2018"
description = "A CLI tool for social coding."
license = "MIT"
homepage = "https://github.com/Frost/git-mob"
repository = "https://github.com/Frost/git-mob"
readme = "README.md"

[dependencies]
dirs = "5.0"
git2 = { version = "0.18", default-features = false }
serde = { version =  "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "~4.4", features = ["derive"] }
clap_mangen = "~0.2"

[build-dependencies]
clap_mangen = "~0.2"
clap = { version = "~4.4", features = ["derive"]}
clap_complete = "~4.5"

[package.metadata.deb]
name = "git-mob"
revision = "1"
section = "vcs"
priority = "optional"
extended-description = """\
A set of git subcommands for including co-authors to your git commits."""
assets = [
    ["target/release/git-mob", "usr/bin/", "755"],
    ["target/release/git-solo", "usr/bin/", "755"],
    ["target/release/git-add-coauthor", "usr/bin/", "755"],
    ["target/release/git-edit-coauthor", "usr/bin/", "755"],
    ["target/release/git-delete-coauthor", "usr/bin/", "755"],
    ["target/release/git-mob.1", "usr/share/man/man1/", "644"],
    ["target/release/git-solo.1", "usr/share/man/man1/", "644"],
    ["target/release/git-add-coauthor.1", "usr/share/man/man1/", "644"],
    ["target/release/git-edit-coauthor.1", "usr/share/man/man1/", "644"],
    ["target/release/git-delete-coauthor.1", "usr/share/man/man1/", "644"],
    ["README.md", "usr/share/doc/git-mob/README", "644"],
]
